<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="Cyclic_sync_pos" Id="{b41553e3-6d5b-4367-a016-be48e4c48d65}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Cyclic_sync_pos

VAR
	timer_bool: BOOL;
	timer_test: TON;
	back: BOOL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Macchina a stati comandi giunto
CASE CTRL.state_axis OF
	
    0: // State 0: Switch on request
		IF (timer_bool = FALSE) THEN
			CTRL.control_word	:= 16#6;        // Reset status
			
			timer_test(IN:=FALSE,PT:=T#3S);
			IF ((CTRL.status_word.0 = 1) AND (CTRL.status_word.4 = 1) AND (CTRL.error = 0) AND CTRL.start) THEN
				CTRL.control_word	:= 16#7;        // Switch on
				INIT();
				timer_bool := TRUE;
			END_IF
		ELSE
			IF (timer_bool)THEN
				timer_test(IN:=TRUE);
				IF ( timer_test.Q = TRUE ) THEN
					CTRL.start		:= FALSE;
					CTRL.state_axis	:= 10;
					timer_bool 		:= FALSE;  
				END_IF
			END_IF
		END_IF
	
    10:
		IF(timer_bool = FALSE) THEN
			IF ((CTRL.error = 0) AND (CTRL.status_word.1 = 1) AND (CTRL.in_opmode = MODE.CYCLIC_SYNC_POS)) THEN           
				TRAJ.target_pos_inc	:= MOTOR.actual_pos_inc;
				CTRL.control_word := 16#0F;
				timer_test(IN:=FALSE,PT:=T#3S);
				timer_bool := TRUE;
			END_IF
		ELSE
			timer_test(IN:=TRUE);
			IF ( timer_test.Q = TRUE ) THEN
				CTRL.state_axis	:= 20;
				timer_bool	:= FALSE;  
			END_IF			
		END_IF
		
	20:
		TRAJ.target_pos_inc	:= MOTOR.actual_pos_inc;
		IF ((CTRL.error = 0) AND (CTRL.in_opmode = MODE.CYCLIC_SYNC_POS)) THEN
			TRAJ.tempo 		:= 0;
			IF( back = TRUE) THEN
				back			:= FALSE;
				CTRL.state_axis	:= 30;
			ELSE
				back			:= TRUE;
				CTRL.state_axis	:= 40;
			END_IF
		END_IF
	
	30:
		FWPoly5();  
		IF (TRAJ.tempo >= 1) THEN
			TRAJ.status := FALSE;
			IF (CTRL.stop) THEN
				CTRL.state_axis := 50;
			ELSE
				CTRL.state_axis := 20;
			END_IF
		ELSE
			TRAJ.tempo := TRAJ.tempo + TRAJ.delta_t;
		END_IF  
         
    40:
		BWPoly5();
		IF (TRAJ.tempo >= 1) THEN
			TRAJ.status := FALSE;
			IF (CTRL.stop) THEN
				CTRL.state_axis := 50;
			ELSE
				CTRL.state_axis := 20;
			END_IF
		ELSE
			TRAJ.tempo := TRAJ.tempo + TRAJ.delta_t;
		END_IF    
               
	50:
		CTRL.control_word	:= 0; 
		CTRL.start 		:= 0;
		CTRL.stop  		:= 0;
		CTRL.state_axis := 0;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="Cyclic_sync_pos">
      <LineId Id="1809" Count="2" />
      <LineId Id="1904" Count="2" />
      <LineId Id="2001" Count="0" />
      <LineId Id="1908" Count="14" />
      <LineId Id="1821" Count="1" />
      <LineId Id="1954" Count="3" />
      <LineId Id="1966" Count="6" />
      <LineId Id="1977" Count="0" />
      <LineId Id="1974" Count="1" />
      <LineId Id="1833" Count="0" />
      <LineId Id="1840" Count="1" />
      <LineId Id="1889" Count="0" />
      <LineId Id="1842" Count="1" />
      <LineId Id="1995" Count="5" />
      <LineId Id="1994" Count="0" />
      <LineId Id="1845" Count="3" />
      <LineId Id="1984" Count="8" />
      <LineId Id="1855" Count="1" />
      <LineId Id="1863" Count="1" />
      <LineId Id="1866" Count="15" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>